# function2widgets

./: .gitignore  README.md  pyproject.toml
docs/: lineedits.md
examples/: context.py  open_external_link.py
examples/codeeditor/: codeeditor_demo.py  dicteditor_demo.py  jsoneditor_demo.py  listeditor_demo.py  tupleeditor_demo.py
examples/codeeditors/: codeeditor_demo.py  dicteditor_demo.py  jsoneditor_demo.py  listeditor_demo.py  tupleeditor_demo.py
examples/comprehensive/: demo_1.py  demo_2.py  demo_3.py  demo_4.py
examples/lineedit/: floatlineedit_demo.py  intlineedit_demo.py  lineedit_demo.py
examples/lineedits/: floatlineedit_demo.py  intlineedit_demo.py  lineedit_demo.py
examples/misc/: coloredit_demo.py  dateedit_demo.py  datetimeedit_demo.py  timeedit_demo.py
examples/numberinput/: dial_demo.py  floatspinbox_demo.py  intspinbox_demo.py  slider_demo.py
examples/pathedit/: dirpathedit_demo.py  filepathedit_demo.py  pathedit_demo.py
examples/selectwidget/: checkbox_demo.py  checkbox_group_demo.py  comobbox_demo.py  comobboxedit_demo.py  radio_button_group_demo.py
examples/textedit/: codeedit_demo.py  plaintextedit_demo.py
function2widgets/: __init__.py  common.py  description.py  factory.py  info.py  parser.py  widget.py
function2widgets/parser/: __init__.py  docstr_parser.py  function_parser.py  parameter_parser.py  widgetconfigs_parser.py
function2widgets/widgets/: __init__.py  _sourcecodeedit.py  allwidgets.py  base.py  codeeditor.py  coloredit.py  dicteditor.py  jsoneditor.py  lineedit.py  listeditor.py  numberedit.py  pathedit.py  (+3 more)
(+34 files in other folders)
