[tool.poetry]
name = "function2widgets"
version = "0.6.13"
description = ""
authors = ["zimolab <zimolab@aliyun.com>"]
readme = "README.md"
license = "GPL-3.0"
packages = [
    {include="function2widgets"}
]
homepage = "https://github.com/zimolab/function2widgets"
repository = "https://github.com/zimolab/function2widgets"
documentation = "https://github.com/zimolab/function2widgets"

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
pyqt6 = "^6.6.1"
pyqt6-qscintilla = "^2.14.1"
docstring-parser = "^0.16"
tomli = "^2.0.1"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"